fixed gaps on flexbox

--- a/components/LastUsers/LastUsers.module.css
+++ b/components/LastUsers/LastUsers.module.css
@@ -23,6 +23,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     gap: 1em; 
     overflow-y: scroll;
 }
