--- a/components/SearchResults/SearchResults.module.css
+++ b/components/SearchResults/SearchResults.module.css
@@ -6,6 +6,7 @@
     border-radius: 0.5em;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     gap: 1em; 
     overflow-y: scroll;
 }
@@ -34,6 +35,7 @@
         border-radius: 0.5em;
         display: flex;
         flex-wrap: wrap;
+        align-content: flex-start;
         gap: 1em; 
         overflow-y: scroll;
     }
